# synacoreChallengeCpp

./: .gitmodules  CMakeLists.txt  README.md  arch-spec
include/: vm.h
src/: vm.cpp
test/: CMakeLists.txt  testVm.cpp
